--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -103,7 +103,7 @@
   --bs-highlight-bg: #fff3cd;
   --bs-border-width: 1px;
   --bs-border-style: solid;
-  --bs-border-color: #dee2e6;
+  --bs-border-color: #000000;
   --bs-border-color-translucent: rgba(0, 0, 0, 0.175);
   --bs-border-radius: 0.375rem;
   --bs-border-radius-sm: 0.25rem;
@@ -3052,19 +3052,19 @@ textarea.form-control-lg {
 
 .btn-primary {
   --bs-btn-color: #fff;
-  --bs-btn-bg: #0d6efd;
-  --bs-btn-border-color: #0d6efd;
+  --bs-btn-bg: #ff0000;
+  --bs-btn-border-color: #ffbb00;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #0b5ed7;
-  --bs-btn-hover-border-color: #0a58ca;
+  --bs-btn-hover-bg: rgb(255, 123, 0);
+  --bs-btn-hover-border-color: linear-gradient(to bottom,rgba(224,46,8,255),rgb(184, 5, 5),rgb(112, 3, 3));
   --bs-btn-focus-shadow-rgb: 49, 132, 253;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #0a58ca;
-  --bs-btn-active-border-color: #0a53be;
+  --bs-btn-active-bg: linear-gradient(to bottom,rgba(224,46,8,255),rgb(184, 5, 5),rgb(112, 3, 3));
+  --bs-btn-active-border-color: linear-gradient(to bottom,rgba(224,46,8,255),rgb(184, 5, 5),rgb(112, 3, 3));
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: #0d6efd;
-  --bs-btn-disabled-border-color: #0d6efd;
+  --bs-btn-disabled-bg: linear-gradient(to bottom,rgba(224,46,8,255),rgb(184, 5, 5),rgb(112, 3, 3));
+  --bs-btn-disabled-border-color: linear-gradient(to bottom,rgba(224,46,8,255),rgb(184, 5, 5),rgb(112, 3, 3));
 }
 
 .btn-secondary {
@@ -4391,7 +4391,7 @@ textarea.form-control-lg {
   --bs-card-cap-color: ;
   --bs-card-height: ;
   --bs-card-color: ;
-  --bs-card-bg: var(--bs-body-bg);
+  --bs-card-bg: black;
   --bs-card-img-overlay-padding: 1rem;
   --bs-card-group-margin: 0.75rem;
   position: relative;
@@ -4915,10 +4915,10 @@ textarea.form-control-lg {
 }
 
 .alert-info {
-  --bs-alert-color: var(--bs-info-text-emphasis);
-  --bs-alert-bg: var(--bs-info-bg-subtle);
-  --bs-alert-border-color: var(--bs-info-border-subtle);
-  --bs-alert-link-color: var(--bs-info-text-emphasis);
+  --bs-alert-color: white;
+  --bs-alert-bg: rgb(0, 0, 0);
+  --bs-alert-border-color: rgb(161, 16, 16);
+  --bs-alert-link-color: rgb(133, 7, 7);
 }
 
 .alert-warning {
