--- a/css/estilo.css
+++ b/css/estilo.css
@@ -4,6 +4,9 @@
 p{
     text-align: justify;
 }
+.foot{
+    color: rgb(0, 0, 0);
+}
 .container-md{
     background-color: rgb(0, 0, 0);
 }
@@ -18,6 +21,7 @@ p{
 }
 h1{
     color: rgb(71, 5, 5), red;
+    padding-top: 5%;
 }
 .accordion-button{
     background-image: linear-gradient(red,rgb(180, 6, 6),rgb(133, 2, 2));
@@ -32,5 +36,20 @@ h1{
     text-shadow: 5px 5px 5px rgb(158, 11, 11);
 }
 .col-md-4{
-    padding-top: 5%;
+    padding-top: 2%;
+}
+.card-text{
+    color: rgb(255, 255, 255);
+    text-shadow: 3px 3px 5px rgb(0, 0, 0);
+}
+.card-title{
+    color: white;
+    text-shadow: 2px 2px rgb(0, 0, 0);
+}
+.card-body{
+    background-image: linear-gradient(to bottom,rgba(224,46,8,255),rgb(184, 5, 5),rgb(112, 3, 3));
+}
+.btn-primary{
+    background-color: rgba(195,43,11,255);
+    text-shadow: 5px 5px 5px yellow;
 }
