--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3992,7 +3992,7 @@ textarea.form-control-lg {
   padding-bottom: var(--bs-navbar-brand-padding-y);
   margin-right: var(--bs-navbar-brand-margin-end);
   font-size: var(--bs-navbar-brand-font-size);
-  color: var(--bs-navbar-brand-color);
+  color:  rgb(0, 0, 0);
   text-decoration: none;
   white-space: nowrap;
 }
