--- a/css/estilo.css
+++ b/css/estilo.css
@@ -56,3 +56,7 @@ h1{
     background-color: rgba(195,43,11,255);
     text-shadow: 5px 5px 5px yellow;
 }
+.card {
+    margin-bottom: 20px;
+    margin: 0 auto;
+}
