--- a/css/estilo.css
+++ b/css/estilo.css
@@ -70,3 +70,15 @@ h1{
     margin-top: 2%;
     margin-bottom: 2%;
 }
+.banner{
+    width: 100%;
+}
+.imglivro{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: 0 0 10px 5px #7e0303;
+}
+.textlivro{
+    padding-top: 2%;
+}
