--- a/css/estilo.css
+++ b/css/estilo.css
@@ -82,3 +82,15 @@ h1{
 .textlivro{
     padding-top: 2%;
 }
+#galeria{
+    margin-top: 2%;
+    margin-bottom: 2%;    
+}
+.espacoabaixo{
+    margin-bottom: 2%;
+
+}
+.espaco{
+    width: 99.8%;
+   
+} 
